kind/ingress/ingress-config.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: green-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: green.saulo.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: green
                port:
                  number: 80
    - host: blue.saulo.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blue
                port:
                  number: 80
